--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
+  
+  <script type="module" src="/js/main.js"></script>
 
   <body>
     <header class="divider">
