--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,33 @@
       </div>
 
       <section class="products">
-        <h2>Top Products</h2>
-        <ul class="product-list"></ul>
+        <h2>Shop by Category</h2>
+        <ul class="product-list category-list">
+          <li class="category-card">
+            <a href="/product_listing/?category=tents">
+              <img src="/images/category-tents.svg" alt="Tents category" />
+              <h3>Tents</h3>
+            </a>
+          </li>
+          <li class="category-card">
+            <a href="/product_listing/?category=backpacks">
+              <img src="/images/category-backpacks.svg" alt="Backpacks category" />
+              <h3>Backpacks</h3>
+            </a>
+          </li>
+          <li class="category-card">
+            <a href="/product_listing/?category=sleeping-bags">
+              <img src="/images/category-sleeping-bags.svg" alt="Sleeping Bags category" />
+              <h3>Sleeping Bags</h3>
+            </a>
+          </li>
+          <li class="category-card">
+            <a href="/product_listing/?category=hammocks">
+              <img src="/images/category-hammocks.svg" alt="Hammocks category" />
+              <h3>Hammocks</h3>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer id="main-footer"></footer>
